--- a/index.html.html
+++ b/index.html.html
@@ -6,6 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Reservo</title>
     <style>
+        .logo {
+    width: 120px;
+    margin-bottom: 20px;
+    filter: brightness(0); /* Para que se vea negro */
+}
+
         body {
             font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
             margin: 0;
@@ -50,6 +56,7 @@
     </style>
 </head>
 <body>
+    <img src="logo.png" alt="Reservo Logo" class="logo">
     <header>Reservo</header>
     <p>Automatiza tus reservas con agentes AI disponibles 24/7</p>
     <button class="cta-button" onclick="alert('Demo próximamente disponible')">Escucha una demo</button>
