--- a/index.html.html
+++ b/index.html.html
@@ -8,7 +8,7 @@
         .logo {
             width: 120px;
             margin-bottom: 20px;
-            filter: brightness(0); /* Para que se vea negro */
+             /* Para que se vea negro */
         }
 
         body {
