--- a/index.html
+++ b/index.html
@@ -1,1 +1,15 @@
-<!DOCTYPE html><html><head><title>Reservo</title></head><body>...</body></html>
+<!DOCTYPE html>
+<html lang="es">
+<head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <title>Reservo</title>
+</head>
+<body>
+    <img src="logo.png" alt="Reservo Logo" style="width: 120px;" />
+    <h1>Reservo</h1>
+    <p>Automatiza tus reservas con agentes AI disponibles 24/7</p>
+    <button onclick="toggleVoice()">Habla con Reservo</button>
+    <script src="script.js"></script>
+</body>
+</html>
