--- a/index.html
+++ b/index.html
@@ -4,12 +4,69 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <title>Reservo</title>
+     <style>
+        .logo {
+            width: 120px;
+            margin-bottom: 20px;
+            filter: brightness(0); /* Para que se vea negro */
+        }
+
+        body {
+            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+            margin: 0;
+            padding: 0;
+            background-color: #f4f4f9;
+            color: #333;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            height: 100vh;
+            text-align: center;
+        }
+
+        header {
+            font-size: 2.5rem;
+            font-weight: bold;
+            margin-bottom: 10px;
+        }
+
+        p {
+            font-size: 1.25rem;
+            margin-bottom: 30px;
+        }
+
+        .cta-button {
+            background-color: #007BFF;
+            color: white;
+            border: none;
+            padding: 15px 30px;
+            font-size: 1rem;
+            border-radius: 8px;
+            cursor: pointer;
+            transition: background-color 0.3s ease;
+            text-decoration: none;
+            display: inline-block;
+        }
+
+        .cta-button:hover {
+            background-color: #0056b3;
+        }
+
+        footer {
+            position: absolute;
+            bottom: 20px;
+            font-size: 0.9rem;
+            color: #888;
+        }
+    </style>
 </head>
 <body>
-    <img src="logo.png" alt="Reservo Logo" style="width: 120px;" />
+    <img src="logo.png" alt="Reservo Logo" class="logo">
     <h1>Reservo</h1>
     <p>Automatiza tus reservas con agentes AI disponibles 24/7</p>
     <button onclick="toggleVoice()">Habla con Reservo</button>
+    <footer>&copy; 2025 Reservo. Todos los derechos reservados.</footer>
     <script src="script.js"></script>
 </body>
 </html>
