--- a/index.html
+++ b/index.html
@@ -64,7 +64,14 @@
     <img src="logo.png" alt="Reservo Logo" class="logo">
     <h1>Reservo</h1>
     <p>Automatiza tus reservas con agentes AI disponibles 24/7</p>
-    <button onclick="toggleVoice()">Habla con Reservo</button>
+   <button
+  id="voice-toggle"
+  class="cta-button"
+  onclick="toggleVoice()"
+>
+  Habla con Reservo
+</button>
+
     <footer>&copy; 2025 Reservo. Todos los derechos reservados.</footer>
     <script src="script.js"></script>
 </body>
