--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
             width: 120px;
             margin-bottom: 20px;
         }
+.cta-button.active {
+  background-color: #28a745; /* verde */
+}
 
         body {
             font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
